WEB-75: fixing the overlap title on mobile

--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -59,6 +59,12 @@
   }
 }
 
+@media only screen and (max-width: 320px) {
+  .container {
+    min-height: 1070px;
+  }
+}
+
 .title {
   color: #f2f3f4;
   max-width: 850px;
